# LangChain-Chroma-RAG-demo-2024

./: README.md  docker-compose.yaml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  server.py
backend/app/: __init__.py
backend/app/config/: __init__.py  embedding_config.py  llm_config.py
backend/app/core/: environment.py  logger.py
backend/app/routers/: ingest_router.py  retrieve_router.py  status_router.py
backend/app/schemas/: status_schema.py
backend/app/services/: ingest_service.py  retrieve_service.py
backend/chroma_db/: chroma.sqlite3
backend/source_documents/: maintenance_log_001.txt  maintenance_log_002.txt  maintenance_log_003.txt  maintenance_log_004.txt  maintenance_log_005.txt
frontend/: Dockerfile  app.py  requirements.txt
