[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Daniel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.10"
langchain-community = "^0.2.9"
openai = "^1.36.0"
langchain-openai = "^0.1.17"
langchain-text-splitters = "^0.2.2"
langchain-chroma = "^0.1.2"
chromadb = "^0.5.4"
chroma-hnswlib = "^0.7.5"
gunicorn = "^22.0.0"
websockets = "^12.0"
uvicorn = "^0.30.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
